Added videos to frontend, backend uses Supabase

--- a/frontend/_includes/footer.html
+++ b/frontend/_includes/footer.html
@@ -12,7 +12,7 @@
             </svg><span>Subscribe</span>
           </a>
         </p> -->
-      <p>Maintained with ❤️ by <a target="_blank" href="https://mathblocks.io/">MathBlocks</a></p>
+      <p>Maintained with ❤️ by the <a target="_blank" href="https://manim.community/">Manim Community</a></p>
       {%- if site.author %}
         <ul class="contact-list">
           {% if site.author.name -%}
@@ -24,7 +24,7 @@
         </ul>
       {%- endif %}
       </div>
-      <div class="footer-col">
+      <div class="footer-col" style="text-align: right;">
         <p>{{ site.description | escape }}</p>
       </div>
     </div>
