Added stuff to the about page

--- a/frontend/_sass/main.scss
+++ b/frontend/_sass/main.scss
@@ -126,12 +126,12 @@
   width: 12rem;
 }
 
-a,
-a:hover,
-a:visited,
-a *,
-a:hover *,
-a:visited *
+.card a,
+.card a:hover,
+.card a:visited,
+.card a *,
+.card a:hover *,
+.card a:visited *
 {
   // border: none;
   // outline: none;
