--- a/frontend/_sass/main.scss
+++ b/frontend/_sass/main.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 .video-container-container {
   display: block;
   margin-left: auto;
@@ -59,6 +61,7 @@
   margin: 0 auto;
   grid-auto-columns: 1fr;
   gap: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 .wrapper {
@@ -136,11 +139,35 @@
 .card a:visited,
 .card a *,
 .card a:hover *,
-.card a:visited *
-{
+.card a:visited * {
   // border: none;
   // outline: none;
   // text-decoration: none;
   color: inherit;
 }
 
+.card-empty {
+  background: #282828;
+}
+.card-loading {
+  background: linear-gradient(
+      to right,
+      rgba(rgb(72, 72, 72), 0) 30%,
+      rgba(rgb(72, 72, 72), 0.35) 50%,
+      rgba(rgb(72, 72, 72), 0) 70%
+    )
+    50% 50%;
+  animation: phAnimation 0.8s linear infinite;
+
+  height: 240px;
+}
+
+@keyframes phAnimation {
+  0% {
+    transform: translate3d(-30%, 0, 0);
+  }
+
+  100% {
+    transform: translate3d(30%, 0, 0);
+  }
+}
